<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jmtproducts.dacia.RemovalActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center">
        <com.google.android.gms.ads.AdView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="@string/ad_size"
            ads:adUnitId="@string/banner_ad_unit_id"
            android:id="@+id/adView"
            android:layout_gravity="center">
        </com.google.android.gms.ads.AdView>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/_1_radio_removal"
            android:id="@+id/textView4"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:textColor="#ff0000"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView4"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true"
            android:src="@drawable/stage1_medium" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Insert Removal Keys PC5-83 into Radio Holes. This Radio is Single Din size. If your vehicle does NOT have a standard size radio, you will need a Single Din Fascia."
            android:id="@+id/textView5"
            android:layout_below="@+id/imageView4"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"
            android:textAlignment="center" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="2) - Radio Removed."
            android:id="@+id/textView6"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textSize="20sp"
            android:typeface="sans"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:enabled="true"
            android:textColor="#ff0000" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView5"
            android:layout_below="@+id/textView6"
            android:layout_centerHorizontal="true"
            android:src="@drawable/stage3_medium" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="Pushing the keys away from each other, pull the radio out."
            android:id="@+id/textView7"
            android:layout_below="@+id/imageView5"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"
            android:textAlignment="center" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
